<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="text_search">Поиск</string>
    <string name="text_media_library">Медиатека</string>
    <string name="text_settings">Настройки</string>
    <string name="text_dark_theme">Темная тема</string>
    <string name="text_share_app">Поделиться приложением</string>
    <string name="link_text_share_app">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="text_support">Написать в поддержку</string>
    <string name="text_user_agreement">Пользовательское соглашение</string>
    <string name="link_user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="title_text_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_text_support">curos1ty@yandex.ru</string>
    <string name="clearButtonDesc">Очистить</string>
    <string name="text_errors_share_app">Не удалось открыть окно чтобы поделиться приложением</string>
    <string name="text_errors_write_support">Не удалось открыть окно для отправки сообщения тех. поддержке</string>
    <string name="text_errors_open_browser">Не удалось открыть браузер</string>
    <string name="empty_search">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="messageHintSearch">Введите название трека или исполнителя</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="album_art">обложка альбома</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="play_pause">Включить, пауза</string>
    <string name="favourite">добавить в избранное</string>
    <string name="unknownAlbum">Неизвестный альбом</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="releaseYear">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="unknownReleaseDate">Неизвестная дата релиза</string>
    <string name="unknownGenre">Неизвестный жанр</string>
    <string name="unknownCountry">Неизвестная страна</string>
    <string name="no_tracks_message">Ваша медиатека пуста</string>
    <string name="no_playlists_message">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty">Пусто</string>
    <string name="tablayout">TabLayout</string>
    <string name="name_playlist">Название*</string>
    <string name="description_playlist">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="text_error_saving_playlist">Ошибка сохранения плейлиста</string>
    <string name="text_name_playlist_cannot_be_empty">Название плейлиста не может быть пустым</string>
    <string name="dialog_exit_creation_title">Завершить создание плейлиста?</string>
    <string name="dialog_exit_creation_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_exit_positive">Завершить</string>
    <string name="dialog_exit_negative">Отмена</string>
    <string name="ok">ОК</string>
    <string name="already_added_track_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="added_track_to_playlist">Трек добавлен в плейлист %1$s</string>
    <string name="playlist_created">Плейлист \"%1$s\" создан</string>
    <string name="menu">Меню</string>
    <string name="playlist_share">Поделиться</string>
    <string name="dialog_title_delete_track">Удалить трек</string>
    <string name="dialog_positive_delete_track">Удалить</string>
    <string name="dialog_delete_message_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="dialog_playlist_share_empty">В этом плейлисте нет списка треков, которым можно поделиться.</string>
    <string name="playlist_info_text_edit">Редактировать информацию</string>
    <string name="playlist_info_delete">Удалить плейлист</string>
    <string name="playlist_update_text">Редактировать</string>
    <string name="save_text">Сохранить</string>
    <string name="playlist_delete_text">Хотите удалить плейлист?</string>
    <string name="yes">Да</string>
    <string name="playlist_empty_tracks">В этом плейлисте нет треков</string>
    <string name="empty_playlist_text">Вы не создали\nни одного плейлиста</string>
</resources>
