<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/ThemeSearchActivity"
    tools:context=".presentation.ui.media.CreatePlaylistFragment">

    <FrameLayout
        android:id="@+id/container_create_playlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <Button
        android:id="@+id/create_playlist_button"
        style="@style/imageRetrySearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/new_playlist"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/empty_playlist_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="46dp"
        android:contentDescription="@string/empty"
        android:src="@drawable/empty_search"
        android:visibility="gone" />

    <TextView
        android:id="@+id/empty_text"
        style="@style/messageHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/empty_search"
        android:visibility="gone" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlist_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:listitem="@layout/item_playlist_fragment" />

</LinearLayout>