<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:layout_marginStart="12dp"
            android:textSize="26sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            app:cornerRadius="16dp"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/black"
            app:layout_constraintWidth="48dp"
            app:layout_constraintHeight="48dp"
            android:scaleType="matrix"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="@string/text_search"
            android:textSize="22sp"/>

        <Button
            android:id="@+id/media_library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cornerRadius="16dp"
            app:icon="@drawable/media_library"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/black"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:scaleType="matrix"
            android:textColor="@color/black"
            android:text="@string/text_media_library"
            android:textSize="22sp"
            />
        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cornerRadius="16dp"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/black"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:scaleType="matrix"
            android:textColor="@color/black"
            android:text="@string/text_settings"
            android:textSize="22sp"
            />

    </LinearLayout>
</LinearLayout>


