<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:background="@color/white"
        app:buttonGravity="center_vertical"
        app:navigationIcon="@drawable/image_back_arrow"

        app:title="@string/text_settings"
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:textSize="18sp"
        android:text="@string/text_dark_theme"
        android:textColor="@color/black"

        />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:text="@string/text_share_app"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:icon="@drawable/image_share"
            app:iconTint="@color/gray"
            app:backgroundTint="@color/white"
            style="?android:attr/borderlessButtonStyle"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:text="@string/text_support"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:icon="@drawable/image_support"
            app:iconTint="@color/gray"
            app:backgroundTint="@color/white"
            style="?android:attr/borderlessButtonStyle"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:text="@string/text_user_agreement"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:icon="@drawable/image_arrow_right"
            app:iconTint="@color/gray"
            app:backgroundTint="@color/white"
            style="?android:attr/borderlessButtonStyle"
            />
    </LinearLayout>



</LinearLayout>