<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_general_create_playlist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/playlist_create_toolbar"
        style="@style/ToolbarBase"
        android:layout_width="match_parent"
        android:tooltipText="@string/new_playlist"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/image_back_arrow"
        app:title="@string/new_playlist" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/create_playlist_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlist_create_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/imagePlayList"
                android:layout_width="0dp"
                android:layout_height="312dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="24dp"
                app:cardBackgroundColor="?attr/android:colorBackground"
                app:cardElevation="0dp"
                app:cardPreventCornerOverlap="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/playlistCoverImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/square_album"
                    android:contentDescription="@string/album_art"
                    android:scaleType="center"
                    android:src="@drawable/playlist_cover_add"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintDimensionRatio="р, 1:1" />
            </androidx.cardview.widget.CardView>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_title_playlist_background"
                style="@style/createPlaylistEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/name_playlist"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagePlayList">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_title_playlist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_description_playlist_background"
                style="@style/createPlaylistEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/description_playlist"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_title_playlist_background">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_description_playlist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/create_playlist_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="17dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/button_background_color_selector"
        android:enabled="false"
        android:fontFamily="@font/ys_display_medium"
        android:shape="rectangle"
        android:text="@string/create_playlist"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size_16sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>